# deg-x-api

./: .env.example  .flake8  .gitignore  Aptfile  Dockerfile  Procfile  README.md  application.py  bitbucket-pipelines.yml  brownie-config.yaml  custom_logging.py  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  requirements_main.txt  taskDef.json
.circleci/: config.yml
apps/appclient/controllers/: appclient_controller.py
apps/appclient/interfaces/: appclient_interface.py
apps/appclient/services/: appclient_service.py  beta_service.py
apps/auditlog/controllers/: auditlog_controller.py
apps/auditlog/interfaces/: notification_interface.py
apps/auditlog/services/: auditlog_service.py
apps/auth/controllers/: auth_controller.py
core/: config.py  constants.py  cron.py  jwt_service.py  urls.py
core/db/: __init__.py  event_listeners.py  populate_core_data.py
core/depends/: __init__.py  form_data.py  get_object_id.py  model.py
core/middleware/: encryption.py  sentry.py
core/middlewares/: sentry.py  settings.py
core/utils/: aes.py  algorithms.py  custom_exceptions.py  helper_service.py  logger.json  loggly.py  model_utility_service.py  request.py  response_service.py  utils_service.py
protobufs/: blockchain.proto
scripts/: add-bsc-brownie.bash  check-syntax-validity.sh  clean-codebase.sh  cleancodebase.sh  install-codebase-tools.sh  install-mongo.sh  runserver.sh  startapp.sh  update-task.sh   webiii_service.py
solana-rust/: instruction.rs
solidity/: ILendingPool.sol  IProtocolDataProvider.sol  Jackpot.sol
(+115 files in other folders)
