[tool.poetry]
name = "deg-x"
version = "0.1.0"
description = "deg x"
authors = ["jevan <evanseburu32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"
coverage = "^6.2"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
mypy = "^0.910"
flake8-import-order = "^0.18.1"
[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 50

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"