[tool.poetry]
name = "deg-x"
version = "0.1.0"
description = "deg x"
authors = ["jevan <evanseburu32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"
mypy = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pydantic = "^2.4.2"
pytest = "^7.4.1"
coverage = "^6.4"
flake8 = "^5.0"
flake8-bugbear = "^21.11.29"
flake8-import-order = "^0.18.1"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 50

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"